[package]
authors = ["Pierre-Étienne Meunier <pe@pijul.org>"]
description = "A client and server SSH library."
documentation = "https://docs.rs/russh"
edition = "2024"
homepage = "https://github.com/warp-tech/russh"
keywords = ["ssh"]
license = "Apache-2.0"
name = "russh"
readme = "../README.md"
repository = "https://github.com/warp-tech/russh"
version = "0.57.0"
rust-version = "1.85"

[features]
default = ["flate2", "aws-lc-rs", "rsa", "pqc-mlkem"]
# Crypto backends: enable at least one of `aws-lc-rs`, `ring`, or `crypto-cng` (Windows-only).
_crypto-common = [
  "dep:aes",
  "dep:block-padding",
  "dep:cbc",
  "dep:ctr",
  "dep:inout",
  "dep:curve25519-dalek",
  "dep:ed25519-dalek",
  "dep:num-bigint",
  "dep:p256",
  "dep:p384",
  "dep:p521",
  "dep:sha2",
  "dep:sha1",
  "dep:digest",
  "dep:hmac",
  "dep:md5",
  "dep:ecdsa",
  "dep:elliptic-curve",
  "dep:signature",
  "dep:sec1",
  "dep:der",
  "dep:spki",
  "dep:pkcs8",
  "dep:pbkdf2",
  "dep:pkcs5",
  "dep:getrandom",
  "dep:rand",
  "dep:rand_core",
  "dep:typenum",
  "dep:hex-literal",
  "dep:home",
  "dep:generic-array",
  "dep:pageant",
  "ssh-key/alloc",
  "ssh-key/std",
  "ssh-key/ed25519",
  "ssh-key/p256",
  "ssh-key/p384",
  "ssh-key/p521",
  "ssh-key/encryption",
  "ssh-key/ppk",
  "ssh-key/hazmat-allow-insecure-rsa-keys",
]
aws-lc-rs = ["dep:aws-lc-rs", "dep:ssh-key", "_crypto-common"] # Default crypto backend.
async-trait = ["dep:async-trait"]
legacy-ed25519-pkcs8-parser = ["yasna"]
# Danger: 3DES cipher is insecure.
des = ["dep:des"]
# Danger: DSA algorithm is insecure.
dsa = ["ssh-key/dsa"]
pageant = ["dep:pageant"]
ring = ["dep:ring", "dep:ssh-key", "_crypto-common"] # Alternative crypto backend.
# Windows CNG crypto backend (Stage 2). Only valid on Windows.
crypto-cng = ["dep:windows", "ssh-key/alloc", "ssh-key/std"]
rsa = ["dep:rsa", "dep:pkcs1", "ssh-key/rsa", "ssh-key/rsa-sha1"]
_bench = ["dep:criterion"]
# WSL Stage 1: Minimal client subset — only client essentials (exec, sftp, local port forwarding).
# No server code, no agent, no local config reading, no caching.
client-minimal = ["algo-minimal"]
# WSL Stage 1: Trim negotiation + registries to a minimal algorithm set.
algo-minimal = []
# Feature-gate PQ ML-KEM hybrid KEX (optional; on by default).
pqc-mlkem = ["dep:libcrux-ml-kem"]

[dependencies]
aes = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
aws-lc-rs = { version = "1.13.1", optional = true }
bitflags = "2.0"
block-padding = { version = "0.3", features = ["std"], optional = true }
byteorder.workspace = true
bytes.workspace = true
cbc = { version = "0.1", optional = true }
ctr = { version = "0.9", optional = true }
curve25519-dalek = { version = "4.1.3", optional = true }
data-encoding = "2.3"
delegate.workspace = true
digest = { workspace = true, optional = true }
der = { version = "0.7", optional = true }
des = { version = "0.8.1", optional = true }
ecdsa = { version = "0.16", optional = true }
ed25519-dalek = { version = "2.0", features = ["rand_core", "pkcs8"], optional = true }
elliptic-curve = { version = "0.13", features = ["ecdh"], optional = true }
enum_dispatch = "0.3.13"
flate2 = { version = "1.0.15", optional = true }
futures.workspace = true
generic-array = { version = "1.3.3", features = ["compat-0_14"], optional = true }
getrandom = { version = "0.2.15", features = ["js"], optional = true }
hex-literal = { version = "0.4", optional = true }
hmac = { workspace = true, optional = true }
inout = { version = "0.1", features = ["std"], optional = true }
libcrux-ml-kem = { version = "0.0.4", optional = true }
log.workspace = true
md5 = { version = "0.7", optional = true }
num-bigint = { version = "0.4.2", features = ["rand"], optional = true }
# num-integer = "0.1"
p256 = { version = "0.13", features = ["ecdh"], optional = true }
p384 = { version = "0.13", features = ["ecdh"], optional = true }
p521 = { version = "0.13", features = ["ecdh"], optional = true }
pbkdf2 = { version = "0.12", optional = true }
pkcs1 = { version = "0.8.0-rc.4", optional = true }
pkcs5 = { version = "0.7", optional = true }
pkcs8 = { version = "0.10", features = ["pkcs5", "encryption", "std"], optional = true }
rand_core = { version = "=0.10.0-rc-3", optional = true }
rand = { workspace = true, optional = true }
ring = { version = "0.17.14", optional = true }
rsa = { version = "0.10.0-rc.10", optional = true }
russh-cryptovec = { version = "0.52.0", path = "../cryptovec", features = [
  "ssh-encoding",
] }
russh-util = { version = "0.52.0", path = "../russh-util" }
sec1 = { version = "0.7", features = ["pkcs8", "der"], optional = true }
sha1 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
signature = { workspace = true, optional = true }
spki = { version = "0.7", optional = true }
ssh-encoding.workspace = true
ssh-key = { version = "=0.6.16", package = "internal-russh-forked-ssh-key", optional = true, default-features = false }
subtle = "2.4"
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "sync", "time"] }
typenum = { version = "1.17", optional = true }
yasna = { version = "0.5.0", features = [
  "bit-vec",
  "num-bigint",
], optional = true }
zeroize = "1.7"
criterion = { version = "0.3", optional = true, features = ["html_reports"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = [
  "io-util",
  "rt-multi-thread",
  "time",
  "net",
] }
home = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
pageant = { version = "0.2", path = "../pageant", optional = true }
windows = { version = "0.61", optional = true, features = [
  "Win32_Security_Cryptography",
] }

[dev-dependencies]
anyhow = "1.0.4"
env_logger.workspace = true
clap = { version = "3.2.3", features = ["derive"] }
tokio = { workspace = true, features = [
  "io-std",
  "io-util",
  "rt-multi-thread",
  "time",
  "net",
  "sync",
  "macros",
  "process",
] }
rand.workspace = true
shell-escape = "0.1"
tempfile = "3.14.0"

[target.'cfg(unix)'.dev-dependencies]
tokio-fd = "0.3"
termion = "2"
ratatui = "0.29.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
russh-sftp = "2.1.0"
tokio.workspace = true
tokio-stream.workspace = true

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "ciphers"
harness = false
